<resources>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_darurat">Darurat</string>
    <string name="menu_sejarah">Sejarah</string>
    <string name="menu_akun">Akun</string>
    <string name="quote">Kekayaan manusia yang terbesar adalah sehat walafiat</string>
    <string name="login_toolbar">Login</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="msg_no_akun">Tidak mempunyai akun?</string>
    <string name="daftar_akun">Daftar Sekarang</string>
    <string name="regis_toolbar">Daftar Akun</string>
    <string name="inpNamaRegis">Nama Lengkap</string>
    <string name="inpEmailRegis">Email</string>
    <string name="inpPasswordRegis">Password</string>
    <string name="textGender">Jenis Kelamin</string>
    <string name="textGolDarah">Golongan Darah</string>
    <string name="inpAlamatRegis">Alamat</string>
    <string name="inpNoHPRegis">No. HP</string>
    <string name="textTglLahirRegis">Tanggal Lahir</string>
    <string name="inpNoBPJSRegis">No. BPJS</string>
    <string name="inpNoKTPRegis">No. KTP</string>
    <string name="dftrAkunRegis">Daftar Akun</string>
    <string name="inpPenyakitSendiriRegis">Riwayat Penyakit Sendiri</string>
    <string name="inpPenyakitKeluargaRegis">Riwayat Penyakit Keluarga</string>
    <string name="inpKeluhanUtamaRegis">Keluhan Utama</string>
    <string name="inpObatRegis">Obat-obatan yang telah dikonsumsi</string>
    <string name="inpAlergiObatRegis">Alergi obat-obatan</string>
    <string name="inpAlergiMakananRegis">Alergi Makanan</string>
    <string name="inpTekananDarahRegis">Tekanan Darah</string>
    <string name="inpGulaDarahRegis">Gula Darah</string>
    <string name="inpNoAsuransiRegis">No. Asuransi</string>
    <string name="inpTanggalFormatRegis">yyyy/mm/dd</string>
    <string name="btnLogOut">Log Out</string>
    <string name="txtInformasiPersonal">Informasi Personal</string>
    <string name="toolbarProfilAkun">Profil Akun</string>
    <string name="btnUpdateAkun">Update Akun</string>
    <string name="btnChat">Chat</string>
    <string name="inpUsernameRegis">Username</string>
    <string name="actPanggil">Melakukan pemanggilan darurat</string>


    <string-array name="inpJenisKelaminGroup">
        <item>Perempuan</item>
        <item>Laki-laki</item>
    </string-array>

    <string-array name="inpGolDarahGroup">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>
    <string name="title_activity_passenger_maps">Map</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="txtKesehatanPribadi">Kesehatan Pribadi</string>
    <string name="txtTekananDarah">Tekanan Darah</string>
    <string name="mmhg">mmHg</string>
    <string name="CallBtn">Call</string>
    <string name="ChatNowBtn">Chat Now</string>
    <string name="ambulansButton">Ambulans</string>
    <string name="pasienButton">Pasien</string>
    <string name="chooseText">Pilih Tipe Akun</string>
    <string name="txtRiwayatKesehatan" />
    <string name="textRiwayatKesehatan">Riwayat Kesehatan</string>
    <string name="txtKeluhan">Keluhan</string>
    <string name="hintRumahSakit">Nama Rumah Sakit</string>
    <string name="inpNamaDriverRegis">Nama Lengkap</string>
    <string name="inpEmailDriverRegis">Email</string>
    <string name="inpPasswordDriverRegis">Password</string>
    <string name="inpNoTelpDriverRegis">No. Telepon</string>
    <string name="inpRumahSakitDriverRegis">Nama Rumah Sakit</string>
    <string name="btnDaftarAkunText">Daftar Akun</string>
    <string name="title_activity_splash_screen_new">SplashScreenNew</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_barcode">Barcode</string>
    <string name="creategrouptoolbar">Create Group</string>

</resources>
